<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_SBValveStatuses" Id="{c4db38d4-4d8c-4f0e-88e3-c2a24c7cbb5d}">
    <Declaration><![CDATA[(* Statuses of the valves for the switchbox *)
TYPE ST_SBValveStatuses :
STRUCT
	// Valve statuses
	bGateValveOpen : BOOL; // LXLHN:VGC:01
	bVentValveOpen : BOOL; // LXLHN:VVC:01
	bORingPumpValveOpen : BOOL; // LXLHN:VRC:01
	bForelineValveOpen : BOOL; // LXLHN:VRC:02
	bSlowPumpValveOpen : BOOL; // LXLHN:VRC:03
	bSBVentOpen : BOOL; // LXLHN:VVC:02
	bSBSlowVentOpen : BOOL; // LXLHN:VVC:03
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>